fix spacing on caption

--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,3 @@ h1, h2, h3, h4{
 img {
 	margin-bottom: 30px;
 }
-.caption {
-	margin-top: -40px;
-}
